[package]
name = "reo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6.20", features = ["macros"]}
chrono = "0.4.31"
clap = { version = "4.4.6", features = ["derive"] }
reqwest = "0.11.22"
rustc-hash = "1.1.0"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
sled = "0.34.7"
tokio = {version = "1.33.0", features = ["full"]}
